--- a/content/post/2019-05-19-uscots-2019.md
+++ b/content/post/2019-05-19-uscots-2019.md
@@ -18,12 +18,12 @@ Last week I attended the [United States Conference on Teaching Statistics](https
 I cajoled four of my graduate students (Jonathan Brown, Mike Huberty, Chelsey Legacy, and Vimal Rao) to tag along, and it was fun to see them interacting with the people and ideas presented. Our alumni from the statistics education program were also well represented with posters and breakout sessions led by myself, Laura Le, Laura Ziegler, and Matt Beckman. 
 
 <figure>
-<img src="/post/2019-05-19-uscots-2019_files/IMG_2636.JPG" alt="Jane Watson" width="750px" height="1000px"/>
+<img src="/post/2019-05-19-uscots-2019_files/IMG_2636.png" alt="Jane Watson" width="750px" height="1000px"/>
 <figcaption>Jane Watson presents a keynote of her work with Austrailian school-level students.</figcaption>
 </figure>
 
 <figure>
-<img src=" /post/2019-05-19-uscots-2019_files/IMG_2637.JPG" alt="Jane Watson" />
+<img src=" /post/2019-05-19-uscots-2019_files/IMG_2637.JPG" alt="Jonathan Brown" />
 <figcaption>Jonathan Brown presents a poster on his work on understanding how students approach simulation-based inferential problems.</figcaption>
 </figure>
 
